Fixed issues with progress pictures gallery on mobile

--- a/styles/pages/DetailsDesktop.module.scss
+++ b/styles/pages/DetailsDesktop.module.scss
@@ -86,8 +86,8 @@
     border-radius: 5px;
 
     .extra_images_gallery_container {
-        width: 115px !important;
-        height: 110px;
+        min-width: 110px !important;
+        min-height: 110px !important;
         display: flex;
         flex-direction: row;
         flex-wrap: nowrap;
